flux/apps/home1/monitoring/telegraf.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: telegraf
