flux/apps/home1/monitoring/vm-k8s-stack.yaml
# Grafana UI
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: lab-gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - "grafana.lab.lkwt.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: victoria-metrics-k8s-stack-grafana
          port: 80
---
# VictoriaMetrics native UI (vmui)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmui
  namespace: monitoring
spec:
  parentRefs:
    - name: lab-gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - "vmui.lab.lkwt.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vmsingle-victoria-metrics-k8s-stack
          port: 8428
